@@ -34,16 +34,7 @@
 
 <h1>Attributes</h1>
 This resolver shares the <a href="../settings/resolvers.html#common">common attributes</a> of composite resolvers.
-<table class="ivy-attributes">
-<thead>
-    <tr><th class="ivy-att">Attribute</th><th class="ivy-att-desc">Description</th><th class="ivy-att-req">Required</th></tr>
-</thead>
-<tbody>
-    <tr><td>allownomd</td><td>true if the absence of module descriptor (usually an ivy file) is authorised for this resolver, false to refuse modules without module descriptor <span class="since">since 1.4</span></td>
-        <td>No, defaults to true</td>
-    </tr>
-</tbody>
-</table>
+
 <h1>Child elements</h1>
 <table class="ivy-children">
 <thead>
