@@ -49,6 +49,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -240,6 +250,22 @@ name|DualResolver
 extends|extends
 name|AbstractResolver
 block|{
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DESCRIPTOR_OPTIONAL
+init|=
+literal|"optional"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DESCRIPTOR_REQUIRED
+init|=
+literal|"required"
+decl_stmt|;
 specifier|private
 name|DependencyResolver
 name|ivyResolver
@@ -896,12 +922,97 @@ name|boolean
 name|allownomd
 parameter_list|)
 block|{
+name|Message
+operator|.
+name|deprecated
+argument_list|(
+literal|"allownomd is deprecated, please use descriptor=\""
+operator|+
+operator|(
+name|allownomd
+condition|?
+name|DESCRIPTOR_OPTIONAL
+else|:
+name|DESCRIPTOR_REQUIRED
+operator|)
+operator|+
+literal|"\" instead"
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|allownomd
 operator|=
 name|allownomd
 expr_stmt|;
+block|}
+comment|/**      * Sets the module descriptor presence rule.      * Should be one of {@link #DESCRIPTOR_REQUIRED} or {@link #DESCRIPTOR_OPTIONAL}.      *        * @param descriptorRule the descriptor rule to use with this resolver.      */
+specifier|public
+name|void
+name|setDescriptor
+parameter_list|(
+name|String
+name|descriptorRule
+parameter_list|)
+block|{
+if|if
+condition|(
+name|DESCRIPTOR_REQUIRED
+operator|.
+name|equals
+argument_list|(
+name|descriptorRule
+argument_list|)
+condition|)
+block|{
+name|allownomd
+operator|=
+literal|false
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|DESCRIPTOR_OPTIONAL
+operator|.
+name|equals
+argument_list|(
+name|descriptorRule
+argument_list|)
+condition|)
+block|{
+name|allownomd
+operator|=
+literal|true
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"unknown descriptor rule '"
+operator|+
+name|descriptorRule
+operator|+
+literal|"'. Allowed rules are: "
+operator|+
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+name|DESCRIPTOR_REQUIRED
+block|,
+name|DESCRIPTOR_OPTIONAL
+block|}
+argument_list|)
+argument_list|)
+throw|;
+block|}
 block|}
 block|}
 end_class
